[package]
edition = "2021"
name = "bm42-js"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
bm42 = "=0.0.0-alpha-rc.7"
openssl = { version = "=0.10.64", features = ["vendored"] }  # CI fails for Windows without this
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"